<resources>
    <string name="app_name">Ludotheque</string>
    <string name="detail_des_regles_simplifiees">Détail des règles simplifiées</string>
    <string name="regles_simplifiees">Règles simplifiées</string>
    <string name="regles_pdf">Règles PDF</string>
    <string name="duree">Durée</string>
    <string name="age_mini">Age mini</string>
    <string name="nombre_de_joueurs">Nb de joueurs</string>
    <string name="titre_du_jeu">Titre du jeu</string>
    <string name="image_jeu">Image jeu</string>
    <string name="liste_jeux">Liste des jeux</string>
    <string name="Valider">valider</string>
    <string name="jeux_de_societe">Jeux de société</string>
    <string name="ajout_jeu">Ajouter un jeu</string>
    <string name="lien_ludovox">Lien Ludovox</string>
</resources>
