<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:id="@+id/image_jeu"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="6dip"
        android:layout_weight="0.15"
        android:src="@drawable/jeux_icone_jeu"
        android:contentDescription="@string/image_jeu" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.85"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/titre_jeu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/titre_du_jeu"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/jeux_icone_age" />

            <TextView
                android:id="@+id/age_mini"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginStart="5dp"
                android:text="@string/titre_du_jeu" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/jeux_icone_nb_pers" />

            <TextView
                android:id="@+id/nb_joueurs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginStart="5dp"
                android:text="@string/titre_du_jeu" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/jeux_icone_duree" />

            <TextView
                android:id="@+id/duree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginStart="5dp"
                android:text="@string/duree" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>